--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,10 +25,10 @@
             </intent-filter>
         </activity>
         <receiver android:name=".MyReceiver" android:exported="false">
-            <intent-filter>
+            <!--<intent-filter>
                 <action android:name="android.intent.action.SCREEN_OFF"/>
                 <action android:name="android.intent.action.SCREEN_ON"/>
-            </intent-filter>
+            </intent-filter> -->
         </receiver>
     </application>
 </manifest>
